--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   margin: 0;
   min-height: 100vh;
   background: #c9ced3;
+  /* background-image: url('./img/bg3.jpg'); */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -68,7 +69,7 @@ h3 {
   background: #242323;
   border-radius: 5px;
   height: 100%;
-  width: 0%;
+  width: 66%;
   transition: width 0.1s linear;
 }
 
